--- a/style.css
+++ b/style.css
@@ -902,8 +902,8 @@ body.home #content-widget-2 .widget-title {
   max-width: 830px;
   padding-left: 80px;
   padding-right: 80px;
-  padding-left: 0;
-  padding-right: 0;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
   padding-bottom: 80px; }
   @media (max-width: 600px) {
     .site-main {
